# fluxsol

./: Book1.xlsx  CMakeLists - NB.txt  CMakeLists-trab.txt  CMakeLists.txt  EqLog.txt  FluxSol.cpp  FluxSol.h  FluxSol_lib.cpp  Hola.txt  LocMetrics.html  LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv  LocMetricsFunctions.html  Log.txt  Manual.docx  README.txt  Release Notes.txt  Solver-Bug-Fixes.txt  build-fluxsol.bat  cae-bug-fixes.txt  defs.cmake  fluxsol.vcxproj.filters  manual.aux  manual.dvi  manual.lof  manual.lot  manual.tex  manual.toc  salida.txt  setvars.bat.txt  udogen.bat.txt  ~$Manual.docx
Examples/Ex3-Conv-Diff-Single/: CMakeLists.txt  Ex3-Conv-Diff-Single.cpp
FluxSol-CAE/: CMakeLists.txt  Compilation Notes.txt  GraphicModel.cpp  GraphicModel.h  GraphicResults.cpp  GraphicResults.h  GridSelection.cpp  GridSelection.h  InputEx.in  JobSubmitDialog.ui  MainWindow.cpp  MainWindow.h  ManageBCDialog.cpp  ManageBCDialog.h  ManageBCDialog.ui  ModelTree.cpp  ModelTree.h  ModelTree.ui  MsgWindow.cpp  MsgWindow.h  NewJobDialog.ui  Param.cpp  Param.ui  Param.ui.autosave  ParamDialog.cpp  ParamDialog.h  QDebugStream.h  QDebugStream_alt.h  SelectNodes.ui  SimpleView - Copy.ui  SimpleView.cpp  SimpleView.cpp.save-failed  SimpleView.h  SimpleView.ui  SimpleView.ui.autosave  SimpleView_OLD.ui  Tetrahedron.cpp  Tetrahedron.h  generar.bat  jobdialog.ui  (+12 more)
FluxSol-CAE/Icons/: Icons.pptx  icons.qrc  lOGOS (1).pptx
FluxSol-CAE/Job/: Job.cpp  Job.h  JobSubmitDialog.cpp  JobSubmitDialog.cpp.save-failed  JobSubmitDialog.h  JobSubmitDialog.h.save-failed  JobThread.cpp  JobThread.h  JobWorker.cpp  JobWorker.cpp.save-failed  JobWorker.h  JobWorker.h.save-failed
FluxSol-CAE/Mesh/: ImportMesh.cpp  ImportMesh.h
FluxSol-CAE/QVTKResWidget/: QVTKResWidget.cpp  QVTKResWidget.h  QVTKResWidget.h.save-failed  ResWidgetWorker.h
FluxSol-CAE/Qt-Tests/: QDockWidget Z-Order.avi  Qt-Tests.rar  qtbug28872.tar
FluxSol-CAE/Utils/: CameraViews.txt  Codigo Original.txt  DragVertex.txt  Ex cmake.txt  Hexa.txt  How to Use Qthreads Part 2.txt  How to Use Qthreads Part1.txt  Interactive vtk plot.txt  LEERXML.txt  MeshQuality.txt  New Text Document.txt  ScalarBarActor.txt  SimpleView WeldSol.txt  Slider2D.txt  Transform Relations (robotic arm).txt  Windows Modified Event.txt  World-Display.txt  area picking.txt  cellpicking.txt  console to QText Edit.txt  console to QTextEdit 2.txt  contours.vtp  databounds.txt  extract sel original id.txt  generate.bat  hichlight points.txt  highlight cells.txt  picking.txt  qt right click tree.txt  quadraticTetra01.vtu  qvtkwidget plot 2d.txt  readUnstructureGrid.txt  readvtkugrid.txt  redirecting cout.txt  test-rep.txt  vtk-2D-plot.txt
FluxSol-GUI/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_old.txt  Cone3.cxx  GraphicModel.h  GridSelection.h  MainWindow  ModelTree.h  README.txt  Timer.cpp  Timer.h  Timer_win32.cpp  Timer_win32.h  diffs.txt  e1.cpp  e1.h  generar.bat  imgui_impl_glfw.cpp  main.cpp  sigev_thread.h  vtkGtkRenderWindowInteractor.cpp  vtkImRenderWindowInteractor.cpp  vtkImRenderWindowInteractor.h  vtkglfwRenderWindowInteractor.cpp  vtkglfwRenderWindowInteractor.h
FluxSol-GUI/Graphics/: CMakeLists.txt  GraphicModel.cpp  GraphicModel.h  SimpleView.cpp  SimpleView.h  generar.bat  vtkRendering.h
FluxSol-GUI/Job/: JobSubmitDialog.cpp  JobWorker.h
FluxSol-GUI/core/: CMakeLists.txt  compressed_translation.cpp  global_defaults.cpp  image_quantize.cpp  method_bind.inc  method_bind_ext.inc  object.cpp  object.h  object_type_db.h  resource.cpp  resource.h  translation.cpp  undo_redo.cpp  ustring.cpp  ustring.h  version.h
FluxSol-GUI/drivers/: CMakeLists.txt  register_driver_types.cpp
FluxSol-GUI/gvtk/: CMakeLists.txt  README.txt  gVTKRenderWindowInteractor.cpp  gVTKRenderWindowInteractor.h  vtkFrame.cpp  vtkFrame.h
FluxSol-GUI/main/: CMakeLists.txt  main.cpp  performance.cpp
FluxSol-GUI/scene/: CmakeLists.txt  register_scene_types.cpp
FluxSol-GUI/servers/: CMakeLists.txt  register_server_types.cpp  visual_server.cpp  visual_server.h
FluxSol-GUI/utils/: interactor_main_loop.txt
FluxSol-GUI/vtkfltk-0.6.1/: vtkFLTKObjectFactory.h  vtkFLTKOpenGLRenderWindow.h
FluxSol-GUI/vtkmm/: init.h  init.h.txt
FluxSol-Solver/: CMakeLists.txt  FluxSol.cpp  FluxSol.h  Input.in  LocMetrics.html  LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv  LocMetricsFunctions.html  generar.bat
FluxSol-Solver/Analysis/: Analysis.cpp  Analysis.h  CMakeLists.txt
FluxSol-Solver/Boundary/: Boundary.cpp  Boundary.h  BoundaryCond.h  BoundaryPatch.cpp  Boundary_Decl.h  CMakeLists.txt
FluxSol-Solver/Examples/: CMakeLists.txt  InputEx.in
FluxSol-Solver/Field/: BoundaryField.cpp  BoundaryField.inst  CMakeLists.txt  Field.cpp  Field.h  Field.inst  FvField.h  FvField.h.save-failed  GeometricField.h  GeometricField.h.save-failed  PatchField.cpp  PatchField.inst  _CC_Fv_field.cpp  _CC_Fv_field.inst  _CC_Fv_field_Def.h
FluxSol-Solver/FiniteVolume/: FvExp.h  FvImp.h
FluxSol-Solver/Input/: CMakeLists (Copia en conflicto de Luciano Buglioni 2015-01-29).txt  Input.cpp  Input.cpp.save-failed  Input.h
FluxSol-Solver/Interpolation/: CenterToFaceInterpolation.h  CenterToFaceInterpolation_Def.h  CenterToVertexInterpolation_Def.h
FluxSol-Solver/Materials/: CMakeLists.txt  Materials.cpp  Materials.h
FluxSol-Solver/Mesh/: CMakeLists.txt  CSRGrid.h  Cell.cpp  Cell.h  Face.cpp  Face.h  FluentMesh.cpp  FluentMesh.h  Grid.h  MeshInfo.h  NastranMesh.cpp  NastranMesh.h  NastranMesh_OLD.cpp  Node.cpp  ReadCGNS (Copia en conflicto de Luciano Buglioni 2015-01-29).cpp  ReadCGNS.cpp  Rectangular.cpp  Vertex.cpp  Vertex.h  fluent.rar  main.cpp
FluxSol-Solver/Model/: CMakeLists.txt  Model.cpp  Model.cpp.save-failed  Model.h  StatThermalModel.cpp  StatThermalModel.h  StatThermoFluidModel.cpp  StatThermoFluidModel.h  main.cpp
FluxSol-Solver/Nastran/: CMakeLists.txt  Elementos.cpp  Elementos.h  Material.cpp  Modelo.cpp  Modelo.h  Nastran.cpp  Nodo.cpp  Nodo.h  Prop.h  Varios.cpp  Varios.h
Tmp/: Tmp-.h  (+1 more)
(+706 files in other folders)
